--- a/hw_rgr.ioc
+++ b/hw_rgr.ioc
@@ -32,6 +32,7 @@ Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
 Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM4_VS_OPM
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
@@ -40,7 +41,7 @@ Mcu.Pin6=PA14
 Mcu.Pin7=PB6
 Mcu.Pin8=PB7
 Mcu.Pin9=PB9
-Mcu.PinsNb=11
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -150,4 +151,6 @@ TIM4.Prescaler=80
 TIM4.Pulse-PWM\ Generation4\ CH4=32767
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM4_VS_OPM.Mode=OPM_bit
+VP_TIM4_VS_OPM.Signal=TIM4_VS_OPM
 board=custom
